[FEAT] Add transfer to list transaction